clusters/cluster/apps/verein-ext/member-id/strip-api-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-api
  namespace: verein-ext
spec:
  stripPrefix:
    prefixes:
      - /api
