clusters/cluster/apps/verein-ext/member-id/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: member-id-backend
  namespace: verein-ext
spec:
  replicas: 1
  selector:
    matchLabels:
      app: member-id-backend
  template:
    metadata:
      labels:
        app: member-id-backend
    spec:
      containers:
      - name: member-id-backend
        image: ghcr.io/neuland-ingolstadt/member-id-backend:build-21 # {"$imagepolicy": "flux-system:member-id-backend"}
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8000
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 20
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 20
          timeoutSeconds: 10
        volumeMounts:
        - name: certs
          mountPath: /app/certs
          readOnly: true
      volumes:
      - name: certs
        secret:
          secretName: member-id-certs
