clusters/cluster/apps/verein-ext/member-id/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: member-id-backend
  namespace: verein-ext
spec:
  type: ClusterIP
  selector:
    app: member-id-backend
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
