clusters/cluster/apps/verein-ext/member-id/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: member-id
  namespace: verein-ext
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: verein-ext-strip-api@kubernetescrd
    traefik.ingress.kubernetes.io/rule-type: PathPrefixStrip
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - id.neuland-ingolstadt.de
        - id.neuland.ing
      secretName: verein-ext-tls
  rules:
    - host: id.neuland-ingolstadt.de
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: member-id-backend
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: member-id-frontend
                port:
                  number: 3000
    - host: id.neuland.ing
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: member-id-backend
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: member-id-frontend
                port:
                  number: 3000
